apps/behemoth-react-fe/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: behemoth-react-fe
spec:
  selector:
    matchLabels: {}
  template:
    metadata:
      labels: {}
    spec:
      containers:
        - name: behemoth-react-fe
          image: registry.local:5000/behemoth-react-fe:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
